k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olim-bank-api-service
spec:
  selector:
    app: olim-bank-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
