k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  # Name your service
  name: postgresdb
  labels:
    app: postgresdb
spec:
  type: NodePort
  ports:
    - port: 5432
  # Pod to route service traffic
  selector:
    app: postgresdb
