k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: go-bank-k8s-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/go-bank-k8s-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/go-bank-k8s-default: "true"
